# flashcards_generator

./: .env.example  .gitignore  DESKTOP_BUILD.md  PENETRATION_TEST_REPORT.md  PENETRATION_TEST_REPORT_v2.md  README.md  capacitor.config.ts  database_analysis_report.md  eslint.config.mjs  integration_audit_report.md  lint.json  lint_report.txt  lint_results.json  lint_results_final.json  lint_results_final_2.json  manual_test_suite.md  marketing_plan_phase_4.md  middleware.ts  mobile-remodel.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  test_demo_api.mjs  test_results.txt  types.ts  vercel.json  vitest.config.ts
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  template.tsx
components/: AnalyticsPageView.tsx  AnalyticsProvider.tsx  AppShell.tsx  AuthGateModal.tsx  BottomNav.tsx  CheckoutButton.tsx  CheckoutSuccessTracker.tsx  ConfirmationModal.tsx  ContextMenu.tsx  CookieConsent.tsx  DesktopSidebar.tsx  EditableCard.tsx  ExportModal.tsx  FeedbackWidget.tsx  FlashcardPlayer.tsx  HomeContent.tsx  InstallPrompt.tsx  Logo.tsx  MobileHomeDashboard.tsx  MobileShell.tsx  Navbar.tsx  NotificationSettings.tsx  OfflineIndicator.tsx  OnboardingProgressDots.tsx  PageTransition.tsx  SocialLogins.tsx  StreakBadge.tsx  StudyHeatmap.tsx  SwipeableFlashcard.tsx  TauriConditionalComponents.tsx  ThemeToggle.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+189 files in other folders)
