[package]
name = "flashcards-generator"
version = "1.0.0"
description = "Gere flashcards com IA para Anki e Quizlet"
authors = ["Flashcards Generator"]
edition = "2021"

[lib]
name = "flashcards_generator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
